--- a/Level-1 Project 3/style.css
+++ b/Level-1 Project 3/style.css
@@ -61,3 +61,7 @@ button{
     box-shadow: -5px -5px 12px #ffffff, 
                  5px  5px 12px #0000004f;
 }
+
+.diff, .equal{
+    background-color: #0ff1f1;
+}
