--- a/Level-1 Project 3/style.css
+++ b/Level-1 Project 3/style.css
@@ -7,6 +7,11 @@
     outline: none;
 }
 
+body{
+    background-image: url(math1.webp);
+    background-size: 50%;
+}
+
 .container{
     height: 100vh;
     display: flex;
